# mous

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README  README.md  TODO  TODO.md  findsrc
.circleci/: config.yml
apps/cli/: cmd.h  ctx.cc  ctx.h  dec.cc  img.cc  info.cc  main.cc  play.cc
apps/ncurses/: AppEnv.cc  AppEnv.h  BaseView.h  BgWindow.h  Client.cc  Client.h  ClientPlayerHandler.cc  ClientPlayerHandler.h  ClientPlaylistHandler.cc  ClientPlaylistHandler.h  ExplorerView.cc  ExplorerView.h  HelpView.cc  HelpView.h  IView.h  MainUi.cc  MainUi.h  Ncurses.h  PlaylistView.cc  PlaylistView.h  Protocol.h  Server.cc  Server.h  ServerContext.cc  ServerContext.h  Session.cc  Session.h  StatusView.cc  StatusView.h  main.cc
apps/qt5/: AppEnv.cpp  AppEnv.h  CustomHeadTabWidget.cpp  CustomHeadTabWidget.hpp  DlgConvertOption.cpp  DlgConvertOption.h  DlgConvertOption.ui  DlgConvertTask.cpp  DlgConvertTask.h  DlgListSelect.cpp  DlgListSelect.h  DlgLoadingMedia.cpp  DlgLoadingMedia.h  FoobarStyle.h  FrmProgressBar.cpp  FrmProgressBar.h  FrmTagEditor.cpp  FrmTagEditor.h  FrmTagEditor.ui  FrmToolBar.cpp  FrmToolBar.h  IPlaylistView.h  MainWindow.cpp  MainWindow.h  MidClickTabBar.cpp  MidClickTabBar.hpp  PlaylistActionHistory.h  PlaylistClipboard.h  SimplePlaylistView.cpp  SimplePlaylistView.h  UiHelper.hpp  main.cpp  mous-qt.pro
charset/: CharsetConv.cpp  CharsetConvInf.cpp
cli/: main.cpp
contrib/MACLib/: APECompress.cpp  APECompress.h  APEDecompress.cpp  APEDecompress.h  APEHeader.cpp  APEInfo.cpp  APEInfo.h  APESimple.cpp  APETag.cpp  APETag.h  All.h  BitArray.cpp  BitArray.h  COPYRIGHT  CircleBuffer.h  ID3Genres.h  IO.h  MACLib.cpp  MACLib.h  MACProgressHelper.cpp  MD5.cpp  NNFilter.cpp  NewPredictor.h  Predictor.h  Prepare.h  Readme.txt  SmartPtr.h  StdLibFileIO.cpp  StdLibFileIO.h  UnBitArray.h  UnBitArrayBase.cpp  WAVInputSource.cpp  WAVInputSource.h
contrib/ffmpeg-strip-wma/: Makefile  asf.c  common.h  mem.c
contrib/uchardect/: CharsetConv.h
core/: AudioMode.h  ConvTask.cc  ConvTask.cpp  ConvTask.h  ConvTaskFactory.cc  ConvTaskFactory.cpp  ConvTaskFactory.h  ConvTaskFactoryImpl.h  ConvTaskImpl.h  Conversion.cc  ConversionImpl.h  Converter.cc  ConverterImpl.h  MediaLoader.cc  MediaLoader.cpp  MediaLoader.h  MediaLoaderImpl.h  PlayList.cpp  PlayList.h  Player.cc  Player.cpp  Player.h  PlayerImpl.h  PlayerPrivate.h  Playlist.cpp  Playlist.h  Plugin.cc  PluginAgent.cc  PluginAgent.cpp  PluginAgent.h  PluginImpl.h  PluginManager.cc  PluginManager.cpp  PluginManager.h  PluginManagerImpl.h  TagParserFactory.cc  TagParserFactory.cpp  TagParserFactory.h  TagParserFactoryImpl.h
frontend/cli/: cmd.h  ctx.cc  ctx.h  dec.cc  img.cc  info.cc  main.cc  main.cpp  play.cc
frontend/ncurses/: AppEnv.cc  AppEnv.h  BgWindow.h  Client.cc  Client.h  ClientPlayerHandler.cc  ClientPlayerHandler.h  ClientPlaylistHandler.cc  ClientPlaylistHandler.h  Config.cc  Config.h  ExplorerView.cc  ExplorerView.h  HelpView.cc  IView.h  MainUi.cc  MainUi.h  MousData.cc  MousData.h  PlaylistView.cc  PlaylistView.h  Protocol.h  Server.cc  Server.h  ServerContext.cc  ServerContext.h  Session.cc  Session.h  StatusView.cc  StatusView.h  main.cc
frontend/qt/: AppEnv.cpp  AppEnv.h  CustomHeadTabWidget.cpp  CustomHeadTabWidget.hpp  DlgConvertOption.cpp  DlgConvertOption.h  FoobarStyle.h  FrmTagEditor.cpp  FrmTagEditor.h  FrmTagEditor.ui  FrmToolBar.h  IPlaylistView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlaylistActionHistory.h  SimplePlaylistView.cpp  SimplePlaylistView.h  UiHelper.hpp  main.cpp  mous-qt.pro  mous-qt_zh_CN.ts
frontend/qt4/: AppEnv.cpp  AppEnv.h  CustomHeadTabWidget.cpp  DlgConvertOption.h  DlgConvertTask.cpp  DlgConvertTask.h  DlgListSelect.h  DlgListSelect.ui  DlgLoadingMedia.ui  FoobarStyle.h  FrmTagEditor.cpp  FrmTagEditor.h  FrmToolBar.cpp  IPlaylistView.h  MainWindow.cpp  MainWindow.h  PlaylistClipboard.h  SimplePlaylistView.cpp  SimplePlaylistView.h  mous-qt.pro
frontend/qt5/: CustomHeadTabWidget.cpp  DlgConvertTask.cpp  DlgConvertTask.h  DlgLoadingMedia.cpp  DlgLoadingMedia.h  FoobarStyle.h  FrmProgressBar.h  FrmProgressBar.ui  FrmTagEditor.cpp  FrmTagEditor.h  FrmToolBar.ui  MainWindow.cpp  MainWindow.h  SimplePlaylistView.cpp  SimplePlaylistView.h  mous-qt_zh_CN.ts
misc/: PlaylistDump.cc  bcoverdump  bpd  coverdump.cc  coverdump.cpp  findsrc  getsrc  grabkey.cc
misc/mp3file/: APETag.h  ID3Tag.h  mp3file.cc
mous-cli/: main.cpp
mous-ncurses/: BgWindow.h  Client.cc  Client.h  ClientPlayerHandler.h  ClientPlaylistHandler.h  Config.h  ExplorerView.cc  ExplorerView.h  HelpView.cc  HelpView.h  IView.h  MainUi.cc  MainUi.h  MousData.h  PlaylistView.cc  PlaylistView.h  Protocol.h  Server.cc  Server.h  Session.cc  Session.h  StatusView.cc  StatusView.h  main.cc
mous-qt/: CustomHeadTabWidget.hpp  DlgConvertOption.h  DlgConvertTask.h  DlgConvertTask.ui  FrmTagEditor.cpp  FrmTagEditor.h  FrmTagEditor.ui  MainWindow.cpp  MainWindow.h  SimplePlaylistView.cpp  SimplePlaylistView.h  mous-qt.pro
plugins/AlsaRenderer/: AlsaPlugin.cpp  AlsaRenderer.cpp  AlsaRenderer.h
plugins/AoRenderer/: AoPlugin.cpp  AoRenderer.cpp  AoRenderer.h
plugins/CuePack/: CuePack.cpp  CuePack.h  CuePlugin.cpp
plugins/FaacEncoder/: FaacEncoder.cpp  FaacEncoder.h  FaacPlugin.cpp
plugins/FaadDecoder/: FaadDecoder.cpp  FaadDecoder.h  FaadHelper.c  FaadPlugin.cpp
plugins/FlacDecoder/: FlacDecoder.cpp  FlacDecoder.h  FlacPlugin.cpp
plugins/LameEncoder/: LameEncoder.cpp  LameEncoder.h  LamePlugin.cpp
plugins/Mac4Decoder/: MacDecoder.cpp  MacDecoder.h
plugins/MacDecoder/: MacDecoder.cpp  MacDecoder.h  MacPlugin.cpp
plugins/Mpg123Decoder/: Mpg123Decoder.cpp  Mpg123Decoder.h  Mpg123Plugin.cpp
plugins/OggDecoder/: OggDecoder.cpp  OggDecoder.h
plugins/OggEncoder/: OggEncoder.cpp  OggEncoder.h  OggPlugin.cpp
plugins/OssRenderer/: OssPlugin.cpp  OssRenderer.cpp  OssRenderer.h
plugins/PlayerStatistics/: PlayerStatistics.cpp  PlayerStatistics.h  PlayerStatisticsPlugin.cpp
plugins/TagLibParser/: CoverArt.cpp  CoverArt.h  TagLibParser.cpp  TagLibParser.h  TagLibPlugin.cpp
(+378 files in other folders)
